--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ select          { background:#e0ffff; color:blue; height: 23px; }
 #in_map_text    { background:#e0ffff; color:blue; height: 23px; width: 68px; }
 #in_act_key     { background:#e0ffff; color:blue; height: 23px; width: 205px; }
 #in_act_val     { background:#e0ffff; color:blue; height: 23px; width: 300px; }
-#div_tab        { position: fixed; right:2px; top: 3px; z-index: 1; }
+#div_tab        { position: fixed; left:39px; top: 3px; z-index: 1; }
 #div_kno, #div_map, #div_set
-                { margin: 30px 0px 0px 0px; }
+                { margin: 36px 0px 0px 0px; }
 #div_act1, #div_act2, #div_all, #div_head, #div_flag, #div_log, #div_summ, #div_info
                 { margin: 5px 0px 0px 0px; } 
 .c_a            { background:#e0ffff; border-color:blue; color:blue; font-size: 110%; padding: 0px 3px 0px 3px; border: solid 3px; border-radius: 5px / 5px; }
