--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
-body            { background:green; color:white; font-size: 14px; font-weight: 100; margin: 0px 0px 0px 0px; }
+body            { background:#101010; color:white; font-size: 14px; font-weight: 100; margin: 0px 0px 0px 0px; }
 th, td          { border: solid 1px; padding: 0px 10px 0px 10px; }
-select          { background:#e0ffff; color:blue; height: 23px; }
-#a_ope_exe      { width: 30px }
-#in_map_text    { background:#e0ffff; color:blue; height: 23px; width: 68px; }
-#in_act_key     { background:#e0ffff; color:blue; height: 23px; width: 205px; }
-#in_act_val     { background:#e0ffff; color:blue; height: 23px; width: 300px; }
-#div_tab        { position: fixed; left:39px; top: 3px; z-index: 1; }
+select          { background:#e0ffff; border: solid 3px; border-radius: 5px / 5px; color:green; height: 28px; }
+input           { background:#e0ffff; border: solid 3px; border-radius: 5px / 5px; color:green; height: 22px; }
+#in_map_text    { width: 68px; }
+#in_act_key     { width: 205px; }
+#in_act_val     { width: 300px; }
+#div_tab        { position: fixed; left: 32px; top: 3px; z-index: 1; }
 #div_kno, #div_map, #div_set
-                { margin: 36px 0px 0px 0px; }
+                { margin: 36px 0px 0px 0px; } 
 #div_act1, #div_act2, #div_all, #div_head, #div_flag, #div_log, #div_summ, #div_info
                 { margin: 5px 0px 0px 0px; } 
-.c_a            { background:#e0ffff; border-color:blue; color:blue; font-size: 110%; padding: 0px 3px 0px 3px; border: solid 3px; border-radius: 5px / 5px; }
-.c_a:hover      { background:#70ffff; }
+.c_btn          { background:#e0ffff; border: solid 3px; border-radius: 5px / 5px; color:green; height: 28px; margin: 0px 3px 0px 0px; padding: 0px 3px 0px 3px; }
+.c_btn:hover    { background:#70ffff; }
 .c_can          { position: relative; }
 .c_can > canvas { position: absolute; }
+.c_tab          { background:#e0ffff; border: solid 3px; border-radius: 5px / 5px; color:green; height: 28px; margin: 0px 3px 0px 0px; padding: 0px 3px 0px 3px; }
+.c_tab:hover    { background:#70ffff; }
